modified get and post api of orderRoute
