# server/swagger_output.json
@@ -23,7 +23,7 @@
     }
   ],
   "paths": {
-    "/create": {
+    "/api/address/create": {
       "post": {
         "description": "",
         "tags": ["Address"],
@@ -674,6 +674,29 @@
         }
       }
     },
+    "api/order/user": {
+      "get": {
+        "tags": ["Orders"],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object"
+                
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized: Invalid or missing token"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/api/order": {
       "post": {
         "description": "Place a new order",
@@ -994,7 +1017,7 @@
         }
       }
     },
-    "/variants/{variantId}": {
+    "/api/products/variants/{variantId}": {
       "delete": {
         "tags": ["Products"],
         "summary": "Delete a variant by ID",
@@ -1058,7 +1081,7 @@
         }
       }
     },
-    "/{category_id}": {
+    "/api/products/{category_id}": {
       "get": {
         "description": "",
         "tags": ["Products"],
@@ -1080,7 +1103,7 @@
         }
       }
     },
-    "/specific/{id}": {
+    "/api/products/specific/{id}": {
       "get": {
         "description": "",
         "tags": ["Products"],
@@ -1105,27 +1128,42 @@
         }
       }
     },
-
     "/api/products/all": {
       "get": {
-        "description": "Get all products with pagination",
         "tags": ["Products"],
+        "summary": "Get all products",
+        "description": "Get all products based on user role and other criteria",
         "parameters": [
           {
             "name": "page",
             "in": "query",
-            "type": "integer",
             "description": "Page number",
-            "default": 1
-          }          
+            "required": false,
+            "type": "integer"
+          },
+          {
+            "name": "pageSize",
+            "in": "query",
+            "description": "Number of items per page",
+            "required": false,
+            "type": "integer"
+          },
+          {
+            "name": "status",
+            "in": "query",
+            "description": "Product status",
+            "required": false,
+            "type": "string"
+          }
         ],
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "Successful response",
             "schema": {
               "type": "array",
               "items": {
-                "$ref": "#/definitions/ProductWithDetails"
+                "type": "object"
+               
               }
             }
           },
@@ -1135,6 +1173,51 @@
         }
       }
     },
+    "/api/products/clients/all": {
+      "get": {
+        "tags": ["Products"],
+        "summary": "Get all products for clients",
+        "description": "Get all products for clients without token verification",
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "description": "Page number",
+            "required": false,
+            "type": "integer"
+          },
+          {
+            "name": "pageSize",
+            "in": "query",
+            "description": "Number of items per page",
+            "required": false,
+            "type": "integer"
+          },
+          {
+            "name": "status",
+            "in": "query",
+            "description": "Product status",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object"
+              
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+  },
     "/api/products/{productId}": {
       "put": {
         "description": "Update product and its variants by ID",
@@ -1546,7 +1629,7 @@
         }
       }
     },
-    "/send": {
+    "/notifications/send": {
       "post": {
         "description": "Create a new notification",
         "tags": ["Notification"],
@@ -1601,7 +1684,7 @@
         }
       }
     },
-    "/types": {
+    "/notifications/types": {
       "post": {
         "description": "Create a new notification type",
         "tags": ["Notification"],
@@ -1636,7 +1719,7 @@
         }
       }
     },
-    "/config": {
+    "/notifications/config": {
       "post": {
         "description": "Create a new notification configuration",
         "tags": ["Notification"],
